--- a/render.yaml
+++ b/render.yaml
@@ -32,12 +32,12 @@ services:
         sync: false  # Добавите после настройки домена
 
   # Frontend (React + Vite) - Static Site
-  - type: static
+  - type: web
     name: timly-frontend
-    region: frankfurt
+    env: static
     buildCommand: "cd frontend && npm install && npm run build"
     staticPublishPath: ./frontend/dist
-    pullRequestPreviewsEnabled: true  # Автоматические превью для PR
+    pullRequestPreviewsEnabled: true
     headers:
       - path: /*
         name: X-Frame-Options
@@ -53,10 +53,8 @@ services:
         source: /*
         destination: /index.html
     envVars:
-      - key: NODE_VERSION
-        value: 18
       - key: VITE_API_URL
-        sync: false  # Добавите URL вашего бэкенда
+        sync: false
 
 # PostgreSQL Database
 databases:
