--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -56,7 +56,7 @@ services:
       context: ./frontend
       dockerfile: Dockerfile
       args:
-        VITE_API_URL: ${BACKEND_URL}
+        VITE_API_BASE_URL: ${BACKEND_URL}
     restart: always
     ports:
       - "80:80"
