--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -45,4 +45,7 @@ prometheus-client==0.19.0
 pytest==7.4.3
 pytest-asyncio==0.21.1
 pytest-cov==4.1.0
-# pytest-httpx удален из-за конфликта зависимостей с httpx 0.25.2pdfplumber==0.10.3
+# pytest-httpx удален из-за конфликта зависимостей с httpx 0.25.2
+
+# Resume parsing
+pdfplumber==0.10.3
